# epiphany-extensions

./: .cvsignore  .gitignore  AUTHORS  COPYING.README  ChangeLog  ChangeLog-20070912  ChangeLog.README  HACKING  MAINTAINERS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  configure.in  ephy-extension.symbols  epiphany-extensions.doap
data/icons/: Makefile.am
extensions/: Makefile.am
extensions/actions/: .cvsignore  Makefile.am  action-properties.glade  action-properties.ui  actions-editor.glade  actions-editor.ui  actions.ephy-extension.in.in  actions.plugin.in.in  actions.xml.in.in  ephy-actions-extension-editor-dialog.c  ephy-actions-extension-editor-dialog.h  ephy-actions-extension-properties-dialog.c  ephy-actions-extension-properties-dialog.h  ephy-actions-extension-util.c  ephy-actions-extension-util.h  ephy-actions-extension.c  ephy-actions-extension.h  extension.c
extensions/adblock/: .cvsignore  Makefile.am  ad-blocker.c  ad-blocker.h  ad-uri-tester.c  ad-uri-tester.h  adblock-pattern.c  adblock-pattern.h  adblock-patterns  adblock-ui.c  adblock-ui.h  adblock.ephy-extension.in.in  adblock.glade  adblock.plugin.in.in  adblock.ui  adblock.xml.in.in  download-latest.pl  ephy-adblock-extension.c  ephy-adblock-extension.h  extension.c  uri-tester.c  uri-tester.h
extensions/auto-reload/: .cvsignore  Makefile.am  auto-reload.ephy-extension.in.in  auto-reload.plugin.in.in  auto-reload.xml.in.in  ephy-auto-reload-extension.c  ephy-auto-reload-extension.h  extension.c
extensions/auto-scroller/: .cvsignore  Makefile.am  auto-scroller.ephy-extension.in.in  auto-scroller.plugin.in.in  auto-scroller.xml.in.in  autoscroll.xpm.h  ephy-auto-scroller-extension.c  ephy-auto-scroller-extension.h  ephy-auto-scroller.c  ephy-auto-scroller.h  extension.c
extensions/bookmarks-tray/: .cvsignore  Makefile.am  README  bookmarks-tray.ephy-extension.in.in  bookmarks-tray.xml.in.in  ephy-bookmarks-tray-extension.c  ephy-bookmarks-tray-extension.h  ephy-bookmarks-tray-ui.xml  extension.c  patch.diff
extensions/cc-license-viewer/: Makefile.am  cc-license-viewer.ephy-extension.in  cc-license-viewer.py
extensions/certificates/: .cvsignore  Makefile.am  certificates.ephy-extension.in.in  certificates.plugin.in.in  certificates.xml.in.in  ephy-certificates-extension.c  ephy-certificates-extension.h  extension.c
extensions/dashboard/: .cvsignore  Makefile.am  dashboard-frontend-xmlwriter.c  dashboard-frontend-xmlwriter.h  dashboard-frontend.c  dashboard.ephy-extension.in.in  dashboard.xml.in.in  ephy-dashboard-extension.c  ephy-dashboard-extension.h  ephy-dashboard.c
extensions/epilicious/: BaseStore.py  DeliciousStore.py  DiigoStore.py  EpiphanyStore.py  Makefile.am  THOUGHTS  TODO  __init__.py  backend.py  config.py  delicious.py  diigo.py  epilicious-config.glade  epilicious-progress.glade  epilicious.ephy-extension.in  epilicious.py.in  epilicious.schemas.in  magnolia.py  progress.py
extensions/error-viewer/: .cvsignore  Makefile.am  README  ephy-error-viewer-extension.c  ephy-error-viewer-extension.h  error-viewer.c  error-viewer.ephy-extension.in.in  error-viewer.glade  error-viewer.h  error-viewer.xml.in.in  extension.c  link-checker.c  link-checker.h  sgml-validator.c  sgml-validator.h
extensions/extensions-manager-ui/: .cvsignore  Makefile.am  ephy-extensions-manager-ui-extension.c  ephy-extensions-manager-ui-extension.h  extension.c  extensions-manager-ui.c  extensions-manager-ui.ephy-extension.in.in  extensions-manager-ui.glade  extensions-manager-ui.h  extensions-manager-ui.ui  extensions-manager-ui.xml.in.in
extensions/favicon/: .cvsignore  Makefile.am  favicon.ephy-extension.in  favicon.py  favicon.xml.in.in
extensions/find/: .cvsignore  Makefile.am  TypeAheadFind.cpp  TypeAheadFind.h  eggfindbar.c  eggfindbar.h  eggfindbarprivate.h  ephy-find-bar.c  ephy-find-bar.cpp  ephy-find-bar.h  ephy-find-extension.c  ephy-find-extension.h  extension.c  find.xml.in.in  mozilla-helpers.cpp  mozilla-helpers.h
extensions/gestures/: .cvsignore  Makefile.am  ephy-gesture.c  ephy-gesture.h  ephy-gestures-extension.c  ephy-gestures-extension.h  ephy-gestures.xml  gestures.c  gestures.ephy-extension.in.in  gestures.plugin.in.in  gestures.xml.in.in  stroke.c  stroke.h
extensions/greasemonkey/: .cvsignore  Makefile.am  ephy-greasemonkey-extension.c  ephy-greasemonkey-extension.h  extension.c  greasemonkey-script.c  greasemonkey-script.h  greasemonkey.ephy-extension.in.in  greasemonkey.plugin.in.in  greasemonkey.xml.in.in
extensions/html5tube/: Makefile.am  ephy-html5tube-extension.c  ephy-html5tube-extension.h  html5tube.c  html5tube.ephy-extension.in.in  html5tube.plugin.in.in
extensions/imagebar/: .cvsignore  Makefile.am  ephy-imagebar-extension.c  ephy-imagebar-extension.h  extension.c  imagebar.ephy-extension.in.in  mozilla-event.cpp  mozilla-event.h
extensions/java-console/: Makefile.am  ephy-java-console-extension.c  ephy-java-console-extension.h  java-console.c  java-console.ephy-extension.in.in
extensions/livehttpheaders/: Makefile.am  ephy-livehttpheaders-extension.c  ephy-livehttpheaders-extension.h  extension.c  livehttpheaders-ui.c  livehttpheaders-ui.glade  livehttpheaders-ui.h  livehttpheaders.ephy-extension.in.in
extensions/net-monitor/: .cvsignore  Makefile.am  ephy-net-monitor-extension.c  ephy-net-monitor-extension.h  extension.c  net-monitor.ephy-extension.in.in  net-monitor.xml.in.in
extensions/page-info/: .cvsignore  Makefile.am  ephy-page-info-extension.c  ephy-page-info-extension.h  extension.c  page-info-context-ui.xml  page-info-dialog.c  page-info-dialog.h  page-info.ephy-extension.in.in  page-info.glade  page-info.xml.in.in
extensions/permissions/: .cvsignore  Makefile.am  ephy-permissions-dialog.c  extension.c  (+4 more)
help/: ChangeLog  ChangeLog.pre-2-24  Makefile.am  epiphany-extensions.omf.in
include/: EphyUtils.h  Makefile.am  ephy-bookmarks-menu.h  ephy-debug.h  ephy-dnd.h  ephy-embed-dialog.h  ephy-file-chooser.h  ephy-file-helpers.h  ephy-gui.h  ephy-link.h  ephy-plugins-i18n.h  ephy-prefs.h  ephy-string.h
plugins/: Makefile.am
(+351 files in other folders)
